--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/{{cookiecutter.package_name}}.yaml
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/{{cookiecutter.package_name}}.yaml
@@ -19,7 +19,7 @@ configuration:
     input_data:
         location: United States
         input_draw_number: 0
-        artifact_path: {{cookiecutter.artifact_path}}
+        artifact_path: # FILL ME
     interpolation:
         order: 0
         extrapolate: False
