--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/{{cookiecutter.package_name}}.in
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/{{cookiecutter.package_name}}.in
@@ -15,15 +15,11 @@ components:
 
     {{cookiecutter.package_name}}.components:
 
-
-{% raw %}
-{% set location = location.replace(" ", "_").replace("'", "").lower() %}
-{% endraw %}
 configuration:
     input_data:
-        location: {% raw %}{{ location[0]|upper}}{{location[1:] }}{% endraw %}
+        location: {% raw %}{{ location_proper }}{% endraw %}
         input_draw_number: 0
-        artifact_path: /share/costeffectiveness/artifacts/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}_{% raw %}{{ location[0]|upper}}{{location[1:] }}{% endraw %}.hdf
+        artifact_path: /share/costeffectiveness/artifacts/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}_{% raw %}{{ location_sanitized }}{% endraw %}.hdf
     interpolation:
         order: 0
         extrapolate: False
