remove package name from the artifact file name

--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.in
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.in
@@ -19,7 +19,7 @@ configuration:
     input_data:
         location: {% raw %}{{ location_proper }}{% endraw %}
         input_draw_number: 0
-        artifact_path: /share/costeffectiveness/artifacts/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}_{% raw %}{{ location_sanitized }}{% endraw %}.hdf
+        artifact_path: /share/costeffectiveness/artifacts/{{cookiecutter.package_name}}/{% raw %}{{ location_sanitized }}{% endraw %}.hdf
     interpolation:
         order: 0
         extrapolate: False
