--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.in
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.in
@@ -4,7 +4,7 @@ components:
             - BasePopulation()
             - Mortality()
         metrics:
-            - Disability()
+            - DisabilityObserver()
             - MortalityObserver()
 
     {{cookiecutter.package_name}}.components:
