Address PR comments, tie up loose ends

--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.in
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.in
@@ -4,10 +4,10 @@ components:
             - BasePopulation()
             - Mortality()
         metrics:
-            - Disability()
+            - DisabilityObserver()
             - MortalityObserver()
 
-    {{cookiecutter.package_name}}.components:
+    # {{cookiecutter.package_name}}.components:
 
 configuration:
     input_data:
