remove duplicate import from merge, comment mysterious code.

--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.in
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.in
@@ -7,6 +7,7 @@ components:
             - DisabilityObserver()
             - MortalityObserver()
 
+    # Causes an error if left empty. Uncomment when you have components. 
     # {{cookiecutter.package_name}}.components:
 
 configuration:
