--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/branches/scenarios.yaml
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/branches/scenarios.yaml
@@ -2,5 +2,6 @@ input_draw_count: 10
 random_seed_count: 5
 
 branches:
-  - branch_name:
+# TODO change to name of intervention
+  - placeholder_branch_name:
       scenario: ['baseline']
