Update results stratification in model spec

--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.yaml
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.yaml
@@ -36,11 +36,13 @@ configuration:
         age_end: 100
 
     metrics:
-        disability:
-            by_age: False
-            by_sex: False
-            by_year: False
-        mortality:
-            by_age: False
-            by_sex: False
-            by_year: False
+        default:
+            - 'age'
+            - 'sex'
+            - 'year'
+        # disability:
+        #     include:
+        #     exclude:
+        # mortality:
+        #     include:
+        #     exclude:
