--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.yaml
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.yaml
@@ -35,7 +35,7 @@ configuration:
         age_start: 0
         age_end: 100
 
-    metrics:
+    observers:
         default:
             - 'age'
             - 'sex'
