new results management system changes

--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.yaml
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.yaml
@@ -35,11 +35,11 @@ configuration:
         age_start: 0
         age_end: 100
 
-    metrics:
+    stratification:
         default:
-            - 'age'
+            - 'age_group'
             - 'sex'
-            - 'year'
+            - 'current_year'
         # disability:
         #     include:
         #     exclude:
