--- a/{{cookiecutter.package_name}}/.github/CODEOWNERS
+++ b/{{cookiecutter.package_name}}/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # default owners
-* @albrja @beatrixkh @hussain-jafari @mattkappel @ramittal @rmudambi @stevebachmeier
+* @albrja @hussain-jafari @mattkappel @patricktnast @rmudambi @stevebachmeier
