update build script to correctly pull upstream branches

--- a/{{cookiecutter.package_name}}/.github/workflows/build.yml
+++ b/{{cookiecutter.package_name}}/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 # -----------------------------------------------------------------------------
 #   - invoked on push, pull_request, or manual trigger
-#   - test under 3 versions of python
+#   - test under at least 4 versions of python
 # -----------------------------------------------------------------------------
 name: build
 on: [push, pull_request, workflow_dispatch]
@@ -19,27 +19,34 @@ jobs:
       - name: Set up Python ${{ "{{" }} matrix.python-version {{ "}}" }}
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ "{{" }} matrix.python-version {{ "}}" }}
+          python-version: ${{ matrix.python-version }}
+      - name: get upstream branch name
+        run: |
+          if "${{ github.event_name == 'pull_request' }}" ; then
+            echo "branch_name=${GITHUB_HEAD_REF}" >> $GITHUB_ENV
+          else
+            echo "branch_name=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+          fi
       - name: check for upstream vivarium
         run: |
-          if git ls-remote --exit-code --heads https://github.com/ihmeuw/vivarium.git ${GITHUB_HEAD_REF} == "0"; then
-            echo "upstream_vivarium_exist=true" >> $GITHUB_ENV
+          if git ls-remote --exit-code --heads https://github.com/ihmeuw/vivarium.git ${branch_name} == "0"; then
+            echo "upstream_exist=true" >> $GITHUB_ENV
           else
-            echo "upstream_vivarium_exist=false" >> $GITHUB_ENV
+            echo "upstream_exist=false" >> $GITHUB_ENV
           fi
       - name: check for upstream vivarium_public_health
         run: |
-          if git ls-remote --exit-code --heads https://github.com/ihmeuw/vivarium_public_health.git ${GITHUB_HEAD_REF} == "0"; then
-            echo "upstream_vivarium_public_health_exist=true" >> $GITHUB_ENV
+          if git ls-remote --exit-code --heads https://github.com/ihmeuw/vivarium_public_health.git ${branch_name} == "0"; then
+            echo "upstream_exist=true" >> $GITHUB_ENV
           else
-            echo "upstream_vivarium_public_health_exist=false" >> $GITHUB_ENV
+            echo "upstream_exist=false" >> $GITHUB_ENV
           fi
       - name: check for upstream vivarium_inputs
         run: |
-          if git ls-remote --exit-code --heads https://github.com/ihmeuw/vivarium_inputs.git ${GITHUB_HEAD_REF} == "0"; then
-            echo "upstream_vivarium_inputs_exist=true" >> $GITHUB_ENV
+          if git ls-remote --exit-code --heads https://github.com/ihmeuw/vivarium_inputs.git ${branch_name} == "0"; then
+            echo "upstream_exist=true" >> $GITHUB_ENV
           else
-            echo "upstream_vivarium_inputs_exist=false" >> $GITHUB_ENV
+            echo "upstream_exist=false" >> $GITHUB_ENV
           fi
       - name: print environment values
         run: |
