Make update_readme.yml raw

--- a/{{cookiecutter.package_name}}/.github/workflows/update_readme.yml
+++ b/{{cookiecutter.package_name}}/.github/workflows/update_readme.yml
@@ -1,3 +1,4 @@
+{% raw -%}
 # -----------------------------------------------------------------------------
 #   - invoked on push to any branch
 # -----------------------------------------------------------------------------
@@ -30,3 +31,4 @@ jobs:
             )
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+{%- endraw %}
