add untracking_age to model spec

--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.yaml
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.yaml
@@ -34,6 +34,7 @@ configuration:
         population_size: 100
         initialization_age_min: 0
         initialization_age_max: 100
+        untracking_age: 100
 
     stratification:
         default:
