--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.yaml
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.yaml
@@ -4,6 +4,7 @@ components:
             - BasePopulation()
             - Mortality()
         results:
+            - ResultsStratifier()
             - DisabilityObserver()
             - MortalityObserver()
 
