--- a/{{cookiecutter.package_name}}/Jenkinsfile
+++ b/{{cookiecutter.package_name}}/Jenkinsfile
@@ -1,5 +1,5 @@
 @Library('vivarium_build_utils') _
 reusable_pipeline(scheduled_branches: ['main'],
-                  skip_build: true,
+                  skip_doc_build: true,
                   upstream_repos: ['vivarium', 'vivarium_public_health', 'gbd_mapping', 'vivarium_cluster_tools', 'vivarium_inputs'],
                   )
