--- a/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.yaml
+++ b/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/model_specifications/model_spec.yaml
@@ -41,7 +41,7 @@ configuration:
         default:
             - 'age_group'
             - 'sex'
-            - 'current_year'
+            - 'event_year'
         # disability:
         #     include:
         #     exclude:
