Add docstring to explain how to handle non-main branches for cron jobs

--- a/{{cookiecutter.package_name}}/Jenkinsfile
+++ b/{{cookiecutter.package_name}}/Jenkinsfile
@@ -28,6 +28,9 @@ Note that updating the shared repo will take affect on the next pipeline invocat
 library("vivarium_build_utils@${get_vbu_version()}")
 
 reusable_pipeline(
+    // Add additional branches for cron jobs below.
+    // Note: Branches not named "main" will require a manual trigger of the first build 
+    // for subsequent scheduled builds to run.
     scheduled_branches: ['main'],
     skip_doc_build: true,
     upstream_repos: ['vivarium', 'vivarium_public_health', 'gbd_mapping', 'vivarium_cluster_tools', 'vivarium_inputs'],
